hard-gists/6152106/run.log
=== Docker Run Log for 6152106 ===
Started at: Mi 29. Okt 16:22:29 CET 2025

[2025-10-29 16:22:30] START: Running container for 6152106
[2025-10-29 16:22:30] SUCCESS: Container cec633d271abec81f185a284707573c3e075ff5f45d5b83a0114e1e88444a215 started for 6152106
=== Container logs for 6152106 ===
  File "/snippet.py", line 6
    except: print 'Usage: knotify.py title text'; sys.exit(1)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6152106 ===
[2025-10-29 16:22:32] INFO: Container cec633d271abec81f185a284707573c3e075ff5f45d5b83a0114e1e88444a215 has stopped
